fix on iphone

--- a/sass/header.scss
+++ b/sass/header.scss
@@ -4,8 +4,8 @@
 .header {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: .7em;
+  justify-content: start;
+  gap: 1em;
   align-items: center;
   height: 100vh;
   padding: .5em;
@@ -34,6 +34,7 @@
   @media screen and (min-width:414px) and (orientation:portrait) {
     justify-content: initial;
     background-size: 400%;
+    gap: 0;
   }
   @media screen and (min-width:667px) and (orientation: landscape) {
     gap: 1.2em;
@@ -107,12 +108,11 @@
       font-size: 3.5rem;
     }
     @media screen and (min-width:390px) and (orientation:portrait) {
-      font-size: 6rem;
+      font-size: 4rem;
       top: 20px;
       left: -17px;
     }
     @media screen and (min-width:414px) and (orientation:portrait) {
-      font-size: 4rem;
       line-height: 1.2;
     }
     @media screen and (min-width: 768px) and (orientation: portrait) {
@@ -182,7 +182,6 @@
       top: 17px;
       left: -10px;
       font-family: $font-secondary;
-      font-style: italic;
       font-weight: bolder;
       font-size: 5rem;
       color: white;
@@ -250,7 +249,7 @@
         bottom: 77px;
         left: 120px;
         line-height: 30px;
-        font-size: 1.7rem;
+        font-size: 1.4rem;
 
       }
       @media screen and (min-width:414px) and (orientation:portrait) {
