--- a/sass/nav.scss
+++ b/sass/nav.scss
@@ -17,9 +17,10 @@ nav {
   }
 
   ul {
+    margin: 0;
     display: flex;
     width: 100%;
-    justify-content: space-around;
+    justify-content: space-between;
   }
 
   li {
